[11.14] released ...
* A 'Z' command was introduced. It is similar to the 'z' command, but scrolls
  only to header groups that contain at least one new or flagged message. This
  is useful for reading large mailing lists.
* The attachment decoding functions have been rewritten. As a result, nail is
  now able to decrypt and display encrypted parts of multipart messages.
* A 'show' command was introduced to make the raw MIME-encoded message text
  visible.
* Modifications to messages made using the 'edit' and 'visual' commands do
  no longer cause changes to the current folder. This is the behavior demanded
  by POSIX.1-2004. MIME decoding and decryption are now performed before each
  message is passed to the editor. If you prefer the old behavior, set the new
  'writebackedited' variable.
* The handling of read-only compressed mbox format folders was fixed.
* In version 11.12, fcntl() read locking was erroneusly introduced for files
  other than system mailboxes too. It is now disabled for such files again.

[11.13] released 10/27/04
* Backslashes outside a quoted command argument are now handled properly.
* For junk mail detection, the characters '_', '#', '&', and '%' are now
  considered as word constituents. Also the '/' character is kept if it
  occurs between digits, and the ';' character if a '&' was previously
  encountered within the same word.
* For junk mail detection, fields of MIME part headers are now handled like
  fields of the main header.
* For junk mail detection, most HTML tags are now ignored, similar to the
  proposal in Paul Graham's 'Better Bayesian Filtering'. Also, the top and
  bottom probabilities are now adjusted to the number of messages used for
  building the database.
* When the junk mail database is updated, it is now truncated beyond the
  last byte just written. Previously, stale data could have remained after
  this point, which was no problem for nail itself, but could make zcat(1)
  fail on the file.